FIXED: portfolio overflow bug

--- a/src/stylesheets/desktop/_portfolio.scss
+++ b/src/stylesheets/desktop/_portfolio.scss
@@ -15,6 +15,7 @@
       padding: 0;
       margin: 0;
       overflow: hidden;
+      position: relative;
 
       &.big {
         background-color: #7e7e7e;
